syntax = "proto3";

package app.v1;

import "buf/validate/validate.proto";

message Task {
  string id = 1;
  string title = 2;
  bool is_completed = 3;
  int64 updated_at = 4;
  int64 created_at = 5;
}

message PingRequest {}

message PingResponse {}

message CreateTaskRequest { string title = 1; }

message CreateTaskResponse { Task task = 1; }

message GetTaskRequest { string id = 1; }

message GetTaskResponse { Task task = 1; }

message ListTasksRequest {}

message ListTasksResponse { repeated Task tasks = 1; }

message UpdateTaskRequest {
  string id = 1;
  string title = 2;
  bool is_completed = 3;
}

message UpdateTaskResponse { Task task = 1; }

message DeleteTaskRequest { string id = 1; }

message DeleteTaskResponse {}

service AppService {
  rpc Ping(PingRequest) returns (PingResponse) {}
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {}
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse) {}
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse) {}
  rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse) {}
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse) {}
}
